Migrate from java.io.File to java.nio.Path (Part 6) (#9216)