@@ -1,8 +1,8 @@
 package games.strategy.engine.data;
 
-import java.io.File;
-import java.nio.file.Paths;
-import java.util.Arrays;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.stream.Collectors;
@@ -18,18 +18,19 @@ class TestDataFileLister {
    * @param folderName Name of the folder in 'test/resources'
    * @return List of all files located in specified folder.
    */
-  Collection<File> listFilesInTestResourcesDirectory(final String folderName) {
-    return Arrays.stream(findFilesInFolder(folderName).listFiles())
-        .sorted(Comparator.comparing(File::getName))
+  Collection<Path> listFilesInTestResourcesDirectory(final String folderName) throws IOException {
+    return Files.list(findFilesInFolder(folderName))
+        .sorted(Comparator.comparing(Path::getFileName, Comparator.comparing(Path::toString)))
         .collect(Collectors.toList());
   }
 
-  private static File findFilesInFolder(final String folderName) {
-    File resourcesFolder = Paths.get("src", "test", "resources", folderName).toFile();
-    if (!resourcesFolder.exists()) {
-      resourcesFolder = Paths.get("smoke-testing", "src", "test", "resources", folderName).toFile();
+  private static Path findFilesInFolder(final String folderName) {
+    Path resourcesFolder = Path.of("src", "test", "resources", folderName);
+    if (!Files.exists(resourcesFolder)) {
+      resourcesFolder = Path.of("smoke-testing", "src", "test", "resources", folderName);
     }
-    Postconditions.assertState(resourcesFolder.exists(), "Could not find folder: " + folderName);
+    Postconditions.assertState(
+        Files.exists(resourcesFolder), "Could not find folder: " + folderName);
     return resourcesFolder;
   }
 }
